# llm_chat_cli

./: .aider.conf.yml  .gitignore  AGENTS.md  CLAUDE.md  CURRENT_FEATURE.md  ChatInterface.py  CodeBlockHelper.py  ENGINEERING_GUIDELINES.md  Makefile  README.md  SESSIONS.md  TODO.md  hello.py  llm_api_chat.py  main.py  pyproject.toml  reflection70b_prompt.md
.ignore/: phase_1_execution_plan.md
admin/: adding_bold_italics.md  demo_markdown_formatting.py  markdown_highlighting_plan.md  revised_markdown_support.md
data/: openaicompat-providers.yaml
modules/: ChatInterface.py  CodeBlockHelper.py  CodeHighlighter.py  CommandHandler.py  Config.py  CustomFileHistory.py  DeepSeekApi.py  DelegatingCompleter.py  InAppHelp.py  KeyBindingsHandler.py  MarkdownExporter.py  MarkdownFormatter.py  MessageHistory.py  MessageIndexer.py  MessageSaverLoader.py  ModelCommandCompleter.py  ModelDiscoveryService.py  OpenAIApi.py  OpenAIChatCompletionApi.py  ProviderConfig.py  ProviderManager.py  Types.py  Version.py  spell_check_word_completer.py  string_space_completer.py  word_list_manager.py
tests/: conftest.py  test_ChatInterface.py  test_CodeBlockHelper.py  test_CommandHandler.py  test_Config.py  test_CustomFileHistory.py  test_DelegatingCompleter.py  test_MarkdownExporter.py  test_MarkdownFormatter.py  test_MessageHistory.py  test_ModelCommandCompleter.py  test_ModelDiscoveryService.py  test_OpenAIApi.py  test_OpenAIChatCompletionApi.py  test_ProviderConfig.py  test_ProviderManager.py  test_dynamic_models.py  test_integration_phase1.py  test_llm_api_chat.py  test_main.py  (+1 more)
(+42 files in other folders)
