[project]
name = "llmc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aider-chat>=0.60.1",
    "prompt-toolkit>=3.0.47",
    "pydantic>=2.9.1",
    "pygments>=2.18.0",
    "pyperclip>=1.9.0",
    "pytest>=8.3.3",
    "requests>=2.32.3",
    "string-space-completer",
    "toml>=0.10.2",
]

[tool.uv.sources]
string-space-completer = { path = "../pylib/packages/string_space_completer", editable = true }
