[project]
name = "llmc"
version = "1.14.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt-toolkit>=3.0.47",
    "pydantic>=2.9.1",
    "pygments>=2.18.0",
    "pyperclip>=1.9.0",
    "requests>=2.32.3",
    "string-space-completer",
    "toml>=0.10.2",
    "pip>=24.3.1",
    "pyyaml>=6.0.2",
    "jaro-winkler>=2.0.3",
]

[tool.uv.sources]
# string-space-completer = { path = "/Users/billdoughty/src/wdd/rust/string_space/python/string_space_completer", editable = true }
string-space-completer = { git = "https://github.com/shock/string_space.git", subdirectory = "python/string_space_completer", tag = "v0.3.2" }

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-timeout>=2.4.0",
]
